# python-utils

./: README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: EfPy_ch1.ipynb  week1_exercises.ipynb
notes/: classes.md
src/python_utils/: __init__.py
tests/: test_placeholder.py
